# game-of-life-python-2025

./: .gitignore  .pylintrc  Makefile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
src/: alive_cell.py  app.py  evolution.py  neighborhood.py  view_model.py  world.py
templates/: blinker.html  generation.html  index.html
tests/: conftest.py  fixtures_types.py  test_app.py  test_evolution.py  test_neighborhood.py  test_view_model.py  test_world.py
